# storkitty

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  INSTALL_TEST.md  README.md  biome.json  bun.lockb  components.json  config.example.toml  install.sh  package.json  playwright.config.ts  postcss.config.js  rsbuild.config.ts  tsconfig.json  tsr.config.json
.github/: branch-protection.md
.github/workflows/: pr-checks.yml  release.yml
.husky/: pre-commit
config/: users.toml
e2e/: README.md  biome.json  tsconfig.json
e2e/fixtures/: test-config.toml
e2e/tests/: auth.spec.ts  create-file-simple.spec.ts  file-management.spec.ts  large-file-upload.spec.ts  multi-directory-operations.spec.ts
e2e/utils/: global-setup.ts  global-teardown.ts  test-helpers.ts
src/: index.tsx  main.rs
src/backend/: auth.rs  config.rs  download.rs  files.rs  mod.rs  setup.rs  state.rs  upload.rs  webauthn.rs
src/backend/api/: app.rs  favorite.rs  link.rs  login.rs  mod.rs  setup.rs  storage.rs  user.rs  webauthn.rs
src/backend/db/: favorite.rs  link.rs  mod.rs  storage.rs  user.rs
src/backend/extractor/: auth.rs  storage.rs
src/backend/utils/: auth.rs
src/frontend/: index.css  index.tsx  routeTree.gen.ts
src/frontend/api/: auth.ts  chunkedUpload.ts  download.ts  favorite.ts  files.ts  link.ts  remote-download.ts  storage.ts  upload.ts  user.ts
src/frontend/components/: ClipboardIndicator.tsx  ClipboardManager.tsx  CreateDirectoryDialog.tsx  CreateFileDialog.tsx  DeleteConfirmDialog.tsx  DownloadDialog.tsx  DownloadDrawer.tsx  DownloadIndicator.tsx  DownloadManager.tsx  FilePreview.tsx  FilesArea.tsx  FilesHeader.tsx  FilesPageComponent.tsx  FilesSidebar.tsx  LoginForm.tsx  MarkdownRenderer.tsx  RenameDialog.tsx  SetupForm.tsx  TimeDisplay.tsx  UploadDrawer.tsx  UploadIndicator.tsx  markdownPreview.tsx  menu-list.tsx
src/frontend/contexts/: AuthContext.tsx  ClipboardContext.tsx  ClipboardContextDefinition.ts  DirectoryContext.tsx  DirectoryContextDefinition.ts  UploadContext.tsx  UploadContextDefinition.ts
src/frontend/hooks/: use-file-list.tsx  use-file-upload.tsx  use-task.tsx  useAuthQueries.ts  useClipboard.ts  useClipboardOperations.ts  useDirectory.ts  useDirectoryContext.ts  useDownload.ts  useFiles.ts  useUploadContext.ts  useViewMode.ts
src/frontend/lib/: urlJoin.ts
src/frontend/routes/: __root.tsx  dashboard.tsx  files.$.tsx  files.$path.tsx  files.index.tsx  files.preview.$directoryId.$.tsx  files.tsx  index.tsx  (+4 more)
templates/: excalidraw.html  excalidraw.html.askama  markdown.html.askama  mermaid.html.askama
(+92 files in other folders)
