[package]
name = "storkitty"
version = "0.1.9"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
mime = "0.3"
bytes = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = { version = "0.1", features = ["sync"] }
url = "2.5"
