[package]
name = "storkitty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros", "multipart"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = "0.4.42"
env_logger = "0.11.8"
flate2 = "1.0"
futures-util = "0.3.31"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
log = "0.4.28"
regex = "1.12.2"
reqwest = { version = "0.12.9", features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10.9"
tar = "0.4"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.8"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["cors", "fs", "trace"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4", "v5"] }
walkdir = "2.5"
webauthn-rs = { version = "0.5.3", features = ["danger-credential-internals", "conditional-ui"] }
zip = "6.0.0"
